--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div>
             <div>
                 <ul>
+                    <li><a style="border-bottom-width: 3px; border-bottom-style: solid;" href="index.html">Home</a></li>
                     <li><a href="statistics.html" >Statistics</a></li>
                     <li><a href="where.html">Where</a></li>
                     <li><a href="prevention.html">Prevention</a></li>
@@ -45,6 +46,7 @@
     </div>
 </div>
 <!--Home Ends-->
+
 
 
 <script src="JS/index.js"></script>
