--- a/statistics.html
+++ b/statistics.html
@@ -21,10 +21,11 @@
             <div>
                 <div>
                     <ul>
-                        <li><a href="index.html">Home <span class="hide">→</span></a></li>
-                        <li><a href="where.html">Where <span class="hide">→</span></a></li>
-                        <li><a href="prevention.html">Prevention <span class="hide">→</span></a></li>
-                        <li><a href="about-the-author.html">My Mission <span class="hide">→</span></a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a style="border-bottom-width: 2px; border-bottom-style: solid;" href="statistics.html" >Statistics</a></li>
+                        <li><a href="where.html">Where</a></li>
+                        <li><a href="prevention.html">Prevention</a></li>
+                        <li><a href="about-the-author.html">My Mission</a></li>
                     </ul>
                 </div>
             </div>
@@ -44,11 +45,15 @@
     <h1></h1>
     <video src="Videos/Gun_Slo_mo.mp4" type="video/mp4"></video>
   </div>
-
-<section class="intro-sec2">
-    <h2>We might know its happening, but we don't actually know how much its happening</h2>
-</section>
 <!--Intro Ends-->
+
+<!--Intro 2 Starts-->
+<section class="intro-sec2">
+    <div>People get shot every day, and we might see it on the news, but we probably don't know how much its actually happening</div>
+    <h2>We need to know the actual amount ↓</h2>
+</section>
+<!--Intro 2 Ends-->
+
 
 <!--Information Starts-->
 <section class="information">
@@ -64,7 +69,7 @@
         <div class="wrapper">
             <div class="left">
                 <div class="first">
-                    <h2 class="section-title">Mumbai</h2>
+                    <h2 class="section-title">Lorem</h2>
                     <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias ab minima odit 
                     perspiciatis magnam ipsa explicabo repellendus amet, inventore natus assumenda asperiores provident 
                     rerum quasi maiores nulla quam. Cum laborum nobis dolor eveniet quaerat quia pariatur
@@ -73,7 +78,7 @@
                     <h6>(1/5)</h6>
                 </div>
                 <div class="second">
-                    <h2 class="section-title">Mysore</h2>
+                    <h2 class="section-title">Lorem</h2>
                     <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse voluptatem soluta aliquid. 
                         Officiis dolores laborum ipsa natus. Aperiam, inventore. Laudantium, quis. Minus dolore quibusdam 
                         aperiam officiis quo ab excepturi, aliquam eum eveniet dolores sapiente, itaque
@@ -81,20 +86,20 @@
                         <h6>(2/5)</h6>
                 </div>
                 <div class="third">
-                    <h2 class="section-title">Chennai</h2>
+                    <h2 class="section-title">Lorem</h2>
                     <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus laboriosam officiis 
                     nemo molestias illum? Illo, autem a harum quasi ipsum qui, quam, nisi optio mollitia recusandae 
                     impedit cumque ab ullam!</p>
                     <h6>(3/5)</h6>
                 </div>
                 <div class="fourth">
-                    <h2 class="section-title">Delhi</h2>
+                    <h2 class="section-title">Lorem</h2>
                     <p class="text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est saepe minus aspernatur quisquam delectus adipisci, 
                     molestias quo dignissimos sint corrupti ex itaque veniam, iusto placeat ipsum? Voluptatibus cupiditate autem eveniet.</p>
                     <h6>(4/5)</h6>
                 </div>
                 <div class="fifth">
-                    <h2 class="section-title">LL</h2>
+                    <h2 class="section-title">Lorem</h2>
                     <p class="text"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est saepe minus aspernatur quisquam delectus adipisci, 
                     molestias quo dignissimos sint corrupti ex itaque veniam, iusto placeat ipsum? Voluptatibus cupiditate autem eveniet.</p>
                     <h6>(5/5)</h6>
@@ -124,7 +129,7 @@
         <h1>We know the Statistics</h1>
         <p>But to actually stop gun violence in philly, we need to know where it happens the most, 
             so we can target it, and eradicate it from those areas</p>
-        <a href="#">Learn Where</a>
+        <a href="where.html" class="btn">Learn Where</a>
         </div>
     </div>
 </section>
