--- a/where.html
+++ b/where.html
@@ -5,7 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/where.css">
-    <title>Where Gun Violence Happens the Most</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+     crossorigin=""></script>
+    <link rel="icon" href="images/Website-logo.png">
+    <title>Where it happens</title>
 </head>
 <body>
 <!--Navbar Start-->
@@ -29,5 +36,14 @@
     </div>
 </div>
 <!--Navbar End-->
+
+<!--Home Page Start-->
+
+<div id="map"></div>
+
+
+<!--Home Page End-->
+
+<script src="JS/where.js"></script>
 </body>
 </html>
