--- a/where.html
+++ b/where.html
@@ -38,10 +38,15 @@
 <!--Navbar End-->
 
 <!--Home Page Start-->
+<div class="container">
+    <div class="content">
+        
+    </div>
+</div>
 
-<div id="map"></div>
-
-
+<section class="map">
+    <div id="map"></div>
+</section>
 <!--Home Page End-->
 
 <script src="JS/where.js"></script>
