--- a/statistics.html
+++ b/statistics.html
@@ -43,7 +43,7 @@
 
 <div class="intro">
     <h1></h1>
-    <video src="Videos/Gun_Slo_mo.mp4" type="video/mp4"></video>
+    <video src="Videos/Gun_Slo_mo3.mov" type="video/mp4"></video>
   </div>
 <!--Intro Ends-->
 
@@ -123,7 +123,7 @@
 <!--Go To WherePage Start-->
 <section class="towhere">
     <div class="video-wrapper">
-        <video playsinline autoplay muted loop src="Videos/bg_video.mp4" type="video/mp4"></video>
+        <video playsinline autoplay muted loop src="Videos/bg_video.mp4" type="video/mp4" ></video>
     
         <div class="header">
         <h1>We know the Statistics</h1>
