--- a/prevention.html
+++ b/prevention.html
@@ -4,23 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="prevention.css">
+    <link rel="stylesheet" href="CSS/prevention.css">
     <title>Ways to Prevent</title>
 </head>
 <body>
-    <!--Navbar Start-->
-    <header>
-        <img class="logo" src="images/-removebg-preview.jpg" alt="logo">
-        <nav>
-            <ul class="nav_links">
-                <li><a href="statistics.html">Statistics</a></li>
-                <li><a href="why.html">Why?</a></li>
-                <li><a href="where.html">Where?</a></li>
-            </ul>
-        </nav>
-        <a class="cta" href="prevention.html"><button>Prevention</button></a>
-
-    </header>
-<!--Navbar End-->
+<!--Hamburger Menu Starts-->
+<div class="menu-wrap">
+    <input type="checkbox" class="toggler">
+    <div class="hamburger">
+        <div></div>
+    </div>
+    <div class="menu">
+        <div>
+            <div>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="statistics.html" >Statistics</a></li>
+                    <li><a href="where.html">Where</a></li>
+                    <li><a style="border-bottom-width: 6px; border-bottom-style: solid;" href="prevention.html">Prevention</a></li>
+                    <li><a href="about-the-author.html">My Mission</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<!--Hamburger Menu Ends-->
 </body>
 </html>
