--- a/where.html
+++ b/where.html
@@ -39,8 +39,37 @@
 
 <!--Home Page Start-->
 <div class="container">
-    <div class="content">
-        
+    <div class="card">
+        <div class="content">
+            <h2>01</h2>
+            <h3>Card One</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
+            a beatae aperiam soluta cumque, reiciendis quae 
+            at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
+            <a href="#">Read More</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="content">
+            <h2>02</h2>
+            <h3>Card Two</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
+            a beatae aperiam soluta cumque, reiciendis quae 
+            at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
+            <a href="#">Read More</a>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="content">
+            <h2>03</h2>
+            <h3>Card Three</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
+            a beatae aperiam soluta cumque, reiciendis quae 
+            at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
+            <a href="#">Read More</a>
+        </div>
     </div>
 </div>
 
@@ -50,5 +79,16 @@
 <!--Home Page End-->
 
 <script src="JS/where.js"></script>
+<script type="text/javascript" src="JS/vanilla-tilt.js"></script>
+<script>
+
+    VanillaTilt.init(document.querySelectorAll(".card"), {
+        max: 25,
+        speed: 400,
+        glare: true,
+        "max-glare": 1
+    });
+    
+    </script>
 </body>
 </html>
