--- a/where.html
+++ b/where.html
@@ -50,19 +50,6 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
             a beatae aperiam soluta cumque, reiciendis quae 
             at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
-            <div class="wrap-collabsible">
-                <input id="collapsible1" class="toggle" type="checkbox">
-                <label for="collapsible1" class="lbl-toggle">More Info</label>
-                <div class="collapsible-content">
-                  <div class="content-inner">
-                    <p>
-                      QUnit is by calling one of the object that are embedded in JavaScript, and faster JavaScript program could also used with
-                      its elegant, well documented, and functional programming using JS, HTML pages Modernizr is a popular browsers without
-                      plug-ins. Test-Driven Development.
-                    </p>
-                  </div>
-                </div>
-              </div>
          </div>
     </div>
     <div class="card">
@@ -72,20 +59,6 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
             a beatae aperiam soluta cumque, reiciendis quae 
             at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
-            <div class="wrap-collabsible">
-                <input id="collapsible2" class="toggle" type="checkbox">
-                <label for="collapsible2" class="lbl-toggle">More Info</label>
-                <div class="collapsible-content">
-                  <div class="content-inner">
-                    <p>
-                      QUnit is by calling one of the object that are embedded in JavaScript, and faster JavaScript program could also used with
-                      its elegant, well documented, and functional programming using JS, HTML pages Modernizr is a popular browsers without
-                      plug-ins. Test-Driven Development.
-                    </p>
-                  </div>
-                </div>
-              </div>
-         </div>
     </div>
 
     <div class="card">
@@ -94,20 +67,7 @@
             <h3>Soutb Philly</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
             a beatae aperiam soluta cumque, reiciendis quae 
-            at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
-            <div class="wrap-collabsible">
-                <input id="collapsible3" class="toggle" type="checkbox">
-                <label for="collapsible3" class="lbl-toggle">More Info</label>
-                <div class="collapsible-content">
-                  <div class="content-inner">
-                    <p>
-                      QUnit is by calling one of the object that are embedded in JavaScript, and faster JavaScript program could also used with
-                      its elegant, well documented, and functional programming using JS, HTML pages Modernizr is a popular browsers without
-                      plug-ins. Test-Driven Development.
-                    </p>
-                  </div>
-                </div>
-              </div>
+            at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>iv>
          </div>
     </div>
     
