--- a/where.html
+++ b/where.html
@@ -59,21 +59,18 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
             a beatae aperiam soluta cumque, reiciendis quae 
             at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
+         </div>
     </div>
 
     <div class="card">
         <div class="content">
             <h2 id="south">South</h2>
-            <h3>Soutb Philly</h3>
+            <h3>South Philly</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
             a beatae aperiam soluta cumque, reiciendis quae 
-            at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>iv>
+            at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
          </div>
-    </div>
-    
-   
-
-    
+    </div>  
 </div>
 
 
