--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Gun Violence in Philly</title>
 </head>
 <body>
+
         
 <!--Hamburger Menu Starts-->
 <div class="menu-wrap">
@@ -47,7 +48,12 @@
 </div>
 <!--Home Ends-->
 
-
+<!--Page Intro-->
+<div class="splash">
+    <h1 class="splash-content" id="content1">Gun Violence has spiked</h1>
+    <h1 class="splash-content" id="content2">We need to stop it</h1>
+    <h1 class="splash-content" id="content3">We must find a solution.</h1>
+</div>
 
 <script src="JS/index.js"></script>
 </body>
