used session storage, edited part of statistics starting video

--- a/statistics.html
+++ b/statistics.html
@@ -36,24 +36,15 @@
 <!--Intro Starts-->
 
 
-<section class="intro-sec">
-    <h1>This Happens Every Day</h1>
-    <h2>(↓)</h2>
-  </section>
-
 <div class="intro">
-    <h1></h1>
-    <video src="Videos/Gun_Slo_mo3.mov" type="video/mp4"></video>
+    <h1>This happens Every Day</h1>
+    <video src="Videos/Gun_Slo_mo3.mov"></video>
   </div>
-<!--Intro Ends-->
-
-<!--Intro 2 Starts-->
-<section class="intro-sec2">
+  <section class="intro-sec">
     <div>People get shot every day, and we might see it on the news, but we probably don't know how much its actually happening</div>
     <h2>We need to know the actual amount ↓</h2>
-</section>
-<!--Intro 2 Ends-->
-
+  </section>
+<!--Intro Ends-->
 
 <!--Information Starts-->
 <section class="information">
