--- a/statistics.html
+++ b/statistics.html
@@ -117,10 +117,11 @@
         <video playsinline autoplay muted loop src="Videos/bg_video.mp4" type="video/mp4" ></video>
     
         <div class="header">
-        <h1>We know the Statistics</h1>
-        <p>But to actually stop gun violence in philly, we need to know where it happens the most, 
-            so we can target it, and eradicate it from those areas</p>
-        <a href="where.html" class="btn">Learn Where</a>
+        <h1>We know the General Statistics</h1>
+        <p>But to actually stop gun violence in philly, we need to seperate Philly into Sections,
+            and dive deep into each of them, and learn how much it happens in each of those sections. 
+        </p>
+        <a href="where.html" class="btn">Dive Deeper</a>
         </div>
     </div>
 </section>
