--- a/where.html
+++ b/where.html
@@ -38,43 +38,77 @@
 <!--Navbar End-->
 
 <!--Home Page Start-->
-<section class="map">
-    <div id="map"></div>
-</section>
+<!--General Perspective Start-->
 
-<div class="container">
-    <div class="card">
-        <div class="content">
-            <h2 id="north">North</h2>
-            <h3>North Philly</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
-            a beatae aperiam soluta cumque, reiciendis quae 
-            at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
-         </div>
-    </div>
-    <div class="card">
-        <div class="content">
-            <h2 id="west">West</h2>
-            <h3>West Philly</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
-            a beatae aperiam soluta cumque, reiciendis quae 
-            at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
-         </div>
-    </div>
-
-    <div class="card">
-        <div class="content">
-            <h2 id="south">South</h2>
-            <h3>South Philly</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
-            a beatae aperiam soluta cumque, reiciendis quae 
-            at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
-         </div>
-    </div>  
+<div class="scroll">
+    <h2 id="first">First, we get a general look at Philly</h2>
+    <h2 id="second">We need to see Philadelphia as a whole.</h2>
+    <h2 id="third">Then, we can dive deeper</h2>
+    <h2 id="fourth">Get more data about each section</h2>
+    <h2 id="fifth">And get the real perspectives of "dangerous" or "safe"</h2>
 </div>
 
 
+<!--General Perspective End-->
+    <section class="map">
+        <div id="map"></div>
+    </section>
+
+    <div class="container">
+        <div class="card">
+            <div class="content">
+                <h2 id="north">North</h2>
+                <h3>North Philly</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
+                a beatae aperiam soluta cumque, reiciendis quae 
+                at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="content">
+                <h2 id="west">West</h2>
+                <h3>West Philly</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
+                a beatae aperiam soluta cumque, reiciendis quae 
+                at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="content">
+                <h2 id="south">South</h2>
+                <h3>South Philly</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
+                a beatae aperiam soluta cumque, reiciendis quae 
+                at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
+            </div>
+        </div>  
+    </div>
 <!--Home Page End-->
+
+
+<!--Dive Deeper-->
+<section>
+    <h1 class="dive"><span id="lets">Lets </span><span id="dive">Dive </span><span id="deeper">Deeper</span></h1>
+</section>
+<!--Dive Deeper End-->
+
+
+<!--Next Home Starts-->
+<section class="dive-north">
+    <div class="container-dn">
+        <h1 class="north">North Philly</h1>
+        <div class="content-dn">Lets diver deeper into North Philly, which is the #1 Kill Area in Philadelphia.</div>
+        <p>North Philly is home to many dangerous neighborhoods like Frankford, Fairhill, and Strawberry Mansion.</p>
+        <ul class="north-bp">
+            <li>Red Spots indicate deadly areas to live</li>
+            <li>Yellow Spots indicate ok areas to live</li>
+            <li>Green Spots indicate safe places to live</li>
+        </ul>
+        <div id="map2"></div>
+    </div>
+</section>
+<!--Next Home Ends-->
 
 <script src="JS/where.js"></script>
 <script>
