--- a/where.html
+++ b/where.html
@@ -39,29 +39,33 @@
 
 <!--Home Page Start-->
 <!--General Perspective Start-->
-
 <div class="scroll">
-    <h2 id="first">First, we get a general look at Philly</h2>
-    <h2 id="second">We need to see Philadelphia as a whole.</h2>
-    <h2 id="third">Then, we can dive deeper</h2>
-    <h2 id="fourth">Get more data about each section</h2>
-    <h2 id="fifth">And get the real perspectives of "dangerous" or "safe"</h2>
+        <h2 class="scroll-order">First, we need to get a general look at Philly</h2>
+        <div class="spacer">LLL</div>
+        <h2 class="scroll-order">Next, we can split Philly into sections.</h2>
+        <div class="spacer">LLL</div>
+        <h2 class="scroll-order">Then, we can dive deeper</h2>
+        <div class="spacer">LLL</div>
+        <h2 class="scroll-order">Get more data about each section</h2>
+        <div class="spacer">LLL</div>
+        <h2 class="scroll-order">And get the real perspectives of "dangerous" or "safe"</h2>
+        <div id="last-spacer">LLL</div>
 </div>
-
-
 <!--General Perspective End-->
-    <section class="map">
-        <div id="map"></div>
-    </section>
 
-    <div class="container">
-        <div class="card">
-            <div class="content">
-                <h2 id="north">North</h2>
-                <h3>North Philly</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
-                a beatae aperiam soluta cumque, reiciendis quae 
-                at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
+<h1 id="note">General Perspective</h1>
+<section class="map">
+        <div id="map"></div>
+</section>
+
+ <div class="container">
+     <div class="card">
+        <div class="content">
+             <h2 id="north">North</h2>
+            <h3>North Philly</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur similique architecto,
+            a beatae aperiam soluta cumque, reiciendis quae 
+            at nesciunt sequi omnis nihil dicta minima veniam incidunt tenetur dolores ducimus!</p>
             </div>
         </div>
         <div class="card">
