--- a/where.html
+++ b/where.html
@@ -38,7 +38,6 @@
 <!--Navbar End-->
 
 <!--Splash Starts-->
-
     <section class="section one">
         <div class="container1">
           <div class="column-left">
@@ -134,7 +133,7 @@
 <section class="dive-north">
     <div class="container-dn">
         <h1 class="north">North Philly</h1>
-        <div class="content-dn">Lets diver deeper into North Philly, which is the #1 Kill Area in Philadelphia.</div>
+        <div class="content-dn">Lets dive deeper into North Philly, which is the #1 Kill Area in Philadelphia.</div>
         <p>North Philly is home to many dangerous neighborhoods like Frankford, Fairhill, and Strawberry Mansion.</p>
         <ul class="north-bp">
             <li>Red Spots indicate deadly areas to live</li>
@@ -144,11 +143,11 @@
         <div id="map2"></div>
     </div>
 </section>
-
+                                    <div class="spacer">---------</div>
 <section class="dive-south">
     <div class="container-sn">
         <h1 class="south">South Philly</h1>
-        <div class="content-ds">Lets diver deeper into North Philly, which is the #1 Kill Area in Philadelphia.</div>
+        <div class="content-ds">Lets dive deeper into North Philly, which is the #1 Kill Area in Philadelphia.</div>
         <p>North Philly is home to many dangerous neighborhoods like Frankford, Fairhill, and Strawberry Mansion.</p>
         <ul class="south-bp">
             <li>Red Spots indicate deadly areas to live</li>
@@ -158,6 +157,22 @@
         <div id="map3"></div>
     </div>
 </section>
+                                    <div class="spacer">---------</div>
+<section class="dive-west">
+    <div class="container-dw">
+        <h1 class="west">West Philly</h1>
+        <div class="content-dw">Lets dive deeper into North Philly, which is the #1 Kill Area in Philadelphia.</div>
+        <p>North Philly is home to many dangerous neighborhoods like Frankford, Fairhill, and Strawberry Mansion.</p>
+        <ul class="west-bp">
+            <li>Red Spots indicate deadly areas to live</li>
+            <li>Yellow Spots indicate ok areas to live</li>
+            <li>Green Spots indicate safe places to live</li>
+        </ul>
+        <div id="map4"></div>
+    </div>
+</section>
+
+    
 <!--Next Home Ends-->
 
 
