--- a/where.html
+++ b/where.html
@@ -170,10 +170,10 @@
         </ul>
         <div id="map4"></div>
     </div>
-</section>
-
-    
+</section>    
 <!--Next Home Ends-->
+
+<!--Transitions To Next-->
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
