--- a/statistics.html
+++ b/statistics.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="CSS/statistics.css">
     <link rel="icon" href="images/Website-logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">  
-    <title>Philly Gun Violence Statistics</title>
+    <title>Statistics - Totals</title>
     
 </head>
     <body>
