--- a/where.html
+++ b/where.html
@@ -139,7 +139,7 @@
             North, South, and West. To start, we will go to North Philly, and learn where the most dangerous areas are, and where 
             the least dangerous areas are. 
         </h3>
-        <a href="Dive-Areas/dive-north.html" class="btn">Lets Learn!</a>
+        <a href="dive-north.html" class="btn">Lets Learn!</a>
     </div>
 </section>
 
