added css files for dive

--- a/index.html
+++ b/index.html
@@ -21,9 +21,18 @@
         <div>
             <div>
                 <ul>
-                    <li><a style="border-bottom-width: 6px; border-bottom-style: solid;" href="index.html">Home</a></li>
+                    <li><a href="index.html" style=" border-bottom-width: 5px; border-bottom-style: solid;">Home</a></li>
                     <li><a href="statistics.html" >Statistics</a></li>
-                    <li><a href="where.html">Where</a></li>
+                    <li>
+                      <div class="dropdown">
+                        <button class="dropbtn"><a href="where.html" style="color: white;" id="a">WHERE</a></button>
+                        <div class="dropdown-content">
+                          <a href="dive-north.html">Deep Dive - North Philly</a>
+                          <a href="dive-south.html">Deep Dive - South Philly</a>
+                          <a href="dive-west.html">Deep Dive - West Philly</a>
+                        </div>
+                      </div>                    
+                    </li>
                     <li><a href="prevention.html">Prevention</a></li>
                     <li><a href="about-the-author.html">My Mission</a></li>
                 </ul>
