--- a/where.html
+++ b/where.html
@@ -33,7 +33,7 @@
                     <li><a href="statistics.html" >Statistics</a></li>
                     <li>
                       <div class="dropdown">
-                        <button class="dropbtn"><a href="where.html" style="color: white;" id="a">WHERE</a></button>
+                        <button class="dropbtn"><a href="where.html" style="color: white; border-bottom-width: 5px; border-bottom-style: solid; padding: 7px;" id="a">WHERE</a></button>
                         <div class="dropdown-content">
                           <a href="dive-north.html">Deep Dive - North Philly</a>
                           <a href="dive-south.html">Deep Dive - South Philly</a>
