added images, may or may not use them

--- a/dive-north.html
+++ b/dive-north.html
@@ -15,10 +15,45 @@
     crossorigin=""></script>
     <!--Leaflet Imports Ends-->
 
-    
+
     <title>Dive North</title>
 </head>
 <body>
-    
+    <!--Navbar Start-->
+<div class="menu-wrap">
+    <input type="checkbox" class="toggler">
+    <div class="hamburger">
+        <div></div>
+    </div>
+    <div class="menu">
+        <div>
+            <div>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="statistics.html" >Statistics</a></li>
+                    <li>
+                      <div class="dropdown">
+                        <button class="dropbtn"><a href="where.html" style="color: white;" id="a">WHERE</a></button>
+                        <div class="dropdown-content">
+                          <a href="dive-north.html" style="border-bottom-width: 2px; border-bottom-style: solid; padding: 7px;">Deep Dive - North Philly</a>
+                          <a href="dive-south.html">Deep Dive - South Philly</a>
+                          <a href="dive-west.html">Deep Dive - West Philly</a>
+                        </div>
+                      </div>                    
+                    </li>
+                    <li><a href="prevention.html">Prevention</a></li>
+                    <li><a href="about-the-author.html">My Mission</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+<!--Navbar End-->
+
+<!--Welcome-->
+<section class="welcome">
+
+<script src="JS/where.js"></script>
+<script src="JS/app.js"></script>
 </body>
 </html>
