--- a/dive-north.html
+++ b/dive-north.html
@@ -52,8 +52,27 @@
 
 <!--Welcome-->
 <section class="welcome">
+    <div class="gallery-wrap">
+        <img src="images/back.png" alt="backBtn" id="backBtn">
+        <div class="gallery">
+            <div>
+                <span><img src="north-philly-images/1075574_951239428263226_4138938958504938087_o.jpg" alt=""></span>
+                <span><img src="north-philly-images/download (1).jpeg" alt=""></span>
+                <span><img src="north-philly-images/download (2).jpeg" alt=""></span>
+            </div>
+            <div>
+                <span><img src="north-philly-images/download.jpeg" alt=""></span>
+                <span><img src="north-philly-images/halerevised.jpg" alt=""></span>
+                <span><img src="north-philly-images/images.jpeg" alt=""></span>
+            </div>
+        </div>
+        <img src="images/next.png" alt="nextBtn" id="nextBtn">
+    </div>
+</section>
 
-<script src="JS/where.js"></script>
-<script src="JS/app.js"></script>
+<!--Welcome Ends-->
+
+<script src="JS/Maps/northmap.js"></script>
+
 </body>
 </html>
