added new animation

--- a/dive-north.html
+++ b/dive-north.html
@@ -52,20 +52,18 @@
 <!--Welcome-->
 
 <div class="intro">
-  <h1>North Philly can be beautiful</h1>
+  <h1 class="caption">North Philly can be beautiful</h1>
   <video src="Videos/Flower_Video.mov"></video>
 </div>
 <section>
   <h1 class="divider">But...</h1>
 </section>
 
-<div class="after-intro">
-  <h1>...it can also be violent</h1>
-  <video src="Videos/Crime_Scene.mov"></video>
-</div> 
-<section>
-  <h1 class="divider">Lets look at North Philly</h1>
-</section>
+
+<div class="next">
+  <img src="images/cs.png" alt="crime scene" style="width:100%;" class="crime-scene">
+  <h1>Its very dangerous</h1>
+</div>
 <!--Welcome Ends-->
 
 <!--Home Page Starts-->
