--- a/dive-north.html
+++ b/dive-north.html
@@ -67,6 +67,9 @@
 <!--Welcome Ends-->
 
 <!--Home Page Starts-->
+<div class="home">
+    <div class="look">Lets Dive Deep into North Philly</div>
+</div>
 <!--Home Page Ends-->
 
 
